add create poll form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,26 @@
 <header><%- include('partials/_header') %></header>
 <body>
   <main>
-    <h1>Have fun! 🥔</h1>
+    <!-- use '/db' as a placeholder for action -->
+    <form action="/db" method="post">
+      <ul>
+       <li>
+         <label for="option 1">Option 1:</label>
+         <input type="text" id="option 1" name="option 1">
+       </li>
+       <li>
+        <label for="option 2">Option 2:</label>
+        <input type="text" id="option 2" name="option 2">
+      </li>
+      <li>
+        <label for="option 3">Option 3:</label>
+        <input type="text" id="option 3" name="option 3">
+      </li>
+      <li>
+        <input type="submit" value="Create Poll">
+      </li>
+      </ul>
+     </form>
   </main>
 </body>
 
