--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,6 +1,29 @@
 // See: https://sass-lang.com/
+$purple: rgb(131, 0, 238);
 
 body,
 html {
   margin: 0;
+}
+
+nav {
+  overflow: hidden;
+  top: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 120px;
+  padding: 1.5em;
+  width: 100%;
+  text-align: center;
+
+  background-color: $purple;
+  color: #FFFFFF;
+}
+
+footer {
+  width: 100%;
+  bottom: 0;
+  background-color: purple;
 }
