add electorate size to new pool form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,10 @@
           <label for="description">Description</label>
           <input type="textarea" id="description" name="description">
         </li>
+        <li>
+          <label for="electorateSize">Expected amount of votes</label>
+          <input type="electorateSize" id="electorateSize" name="electorateSize">
+        </li>
        <li>
          <label for="email">Managing Email</label>
          <input type="email" id="email" name="email">
