modified in schema poll id type to INT, the function was generating error; cascade type change to the other 2 tables, removed old seed files add new ones for pools and choices, not sure how votes table works

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <body>
   <main>
     <!-- use '/db' as a placeholder for action -->
-    <form id="create-poll" action="/polls/new" method="post">
+    <form id="create-poll" action="/db" method="post">
 
       <ul id="list">
         <li>
