rename ballot containers

--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -21,8 +21,8 @@
     <!-- TODO: Implement poll using jquery sortable interaction
       https://jqueryui.com/sortable
     -->
-    <ul id="ranking-value" class="poll-list"></ul>
-    <ul id="vote-list" class="poll-list"></ul>
+    <ul id="rank-container" class="poll-list"></ul>
+    <ul id="choice-container" class="poll-list"></ul>
   </main>
 </body>
 
