--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/results.css" type="text/css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -19,6 +20,25 @@
 <body>
   <main>
     <!-- TODO: Implement results -->
+    <div class="content-container">
+      <header class="poll-title"><h2>Example Title</h2></header>
+      <div class="results-list">
+        <span class="result">
+          <div>Option 1</div>
+            <span class="result-bar-wrapper">
+              <span class="result-bar"></span>
+            </span>
+            <div>20%</div>
+        </span>
+        <span class="result">
+          <h3>Option 2</h3>
+            <span class="result-bar-wrapper">
+              <span class="result-bar"></span>
+            </span>
+            <h3>20%</h3>
+        </span>
+      </div>
+    </div>
   </main>
 </body>
 
