--- a/views/results.ejs
+++ b/views/results.ejs
@@ -23,20 +23,24 @@
     <div class="content-container">
       <header class="poll-title"><h2>Example Title</h2></header>
       <div class="results-list">
-        <span class="result">
-          <div>Option 1</div>
+        <section class="result-box">
+          <div class="option-name">Option 1fffffffffffffffffffffffffffffff
+            fffffffffffffffffff</div>
+          <!-- <div class='n'> -->
+
             <span class="result-bar-wrapper">
               <span class="result-bar"></span>
             </span>
             <div>20%</div>
-        </span>
-        <span class="result">
+          <!-- </div> -->
+        </section>
+        <section class="result-box">
           <h3>Option 2</h3>
             <span class="result-bar-wrapper">
               <span class="result-bar"></span>
             </span>
             <h3>20%</h3>
-        </span>
+        </section>
       </div>
     </div>
   </main>
