--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -13,6 +13,8 @@
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+  <script type="text/javascript" src="/scripts/ballot.js"></script>
+  <script type="text/javascript" src="/scripts/functions.js"></script>
 </head>
 <header><%- include('partials/_header') %></header>
 <body>
