--- a/styles/ballot.scss
+++ b/styles/ballot.scss
@@ -18,3 +18,12 @@
   font-size: 1.2em;
   width: 120px;
 }
+
+#vote-submit {
+  margin-top: 10px;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: row;
+}
