--- a/styles/results.scss
+++ b/styles/results.scss
@@ -6,11 +6,11 @@
   width: 400px;
 }
 
-.poll-title {
-  overflow: hidden;
-  border-bottom: 1px solid black;
+// .poll-title {
+//   overflow: hidden;
+//   border-bottom: 1px solid black;
 
-}
+// }
 
 .option-name {
   position:relative;
