--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -13,18 +13,25 @@
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-  <script type="text/javascript" src="/scripts/ballot.js"></script>
-  <script type="text/javascript" src="/scripts/functions.js"></script>
 </head>
 <header><%- include('partials/_header') %></header>
 <body>
   <main>
-    <form method="POST" action="/api/vote/">
-      <ol id="rank-container" class="poll-list"></ol>
-      <ol id="choice-container" class="poll-list"></ol>
-      <input type="submit" id="vote-submit" value="Submit">
-    </form>
-    </main>
+    <header class="poll-title"> Placeholder Title</header>
+    <div class="content-container" style="height: fit-content;">
+      <!-- <div id="form-content"> -->
+        <form method="POST" action="/api/vote/">
+          <ol id="rank-container" class="poll-list"></ol>
+          <ol id="choice-container" class="poll-list"></ol>
+          <div>
+            <input type="submit" id="vote-submit" value="Submit">
+          </div>
+        </form>
+      <!-- </div> -->
+    </div>
+  </main>
 </body>
+<script type="text/javascript" src="/scripts/ballot.js"></script>
+<script type="text/javascript" src="/scripts/functions.js"></script>
 
 </html>
