--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,10 @@
-<nav>
-  <a class="navbar-brand" href="/">Decision Maker</a>
+<!-- <nav>
+  <a class="navbar-brand" href="/"><h2 class="display-2">Decision Maker</h1></a>
+</nav> -->
+<nav class="navbar navbar-light justify-content-between">
+  <a class="navbar-brand" href="#">
+    <img src="https://www.lighthouselabs.ca/assets/icons/node-d5441098db44c76f1ca242be2035c157cbed421a65aa7dc8f01d9b5304f745a9.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    Decision Maker
+  </a>
+  <a href="/"><button type="button" class="btn btn-success">Create a new poll</button></a>
 </nav>
