--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -7,16 +7,16 @@ html {
 }
 
 nav {
-  overflow: hidden;
-  top: 0;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 120px;
-  padding: 1.5em;
-  width: 100%;
-  text-align: center;
+  // overflow: hidden;
+  // top: 0;
+  // position: fixed;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  // height: 120px;
+  // padding: 1.5em;
+  // width: 100%;
+  // text-align: center;
 
   background-color: $purple;
   color: #FFFFFF;
