--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/ballot.css" type="text/css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
@@ -17,10 +18,10 @@
 <header><%- include('partials/_header') %></header>
 <body>
   <main>
-   
     <div class="content-container">
       <div id="form-content">
-        <h4 class="poll-title"> Placeholder Title</h4>
+        <h4 class="poll-title"></h4>
+        Drag and drop the order of your choices
         <form method="POST" action="/api/vote/">
           <ol id="rank-container" class="poll-list"></ol>
           <ol id="choice-container" class="poll-list"></ol>
