--- a/styles/ballot.scss
+++ b/styles/ballot.scss
@@ -17,6 +17,7 @@
   padding: 5px;
   font-size: 1.2em;
   width: 120px;
+  height: 120px;
 }
 
 #vote-submit {
@@ -28,4 +29,9 @@
   width: fit-content;
   display: flex;
   flex-direction: row;
+}
+
+#choice-container > .ballot-entry {
+  border-radius: 10px;
+  background-color: yellow;
 }
