--- a/styles/ballot.scss
+++ b/styles/ballot.scss
@@ -1,14 +1,13 @@
 
 
 .poll-list {
-  border: 1px solid black;
   width: 140px;
   min-height: 20px;
   list-style-type: none;
   margin: 0;
   padding: 5px 0 0 0;
   float: left;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .ballot-entry {
@@ -18,6 +17,7 @@
   font-size: 1.2em;
   width: 120px;
   height: 120px;
+  text-align: center;
 }
 
 #vote-submit {
@@ -31,7 +31,14 @@
   flex-direction: row;
 }
 
+#choice-container {
+  border: 1px solid black;
+  width: 222px;
+}
+
+
 #choice-container > .ballot-entry {
   border-radius: 10px;
   background-color: yellow;
+  width: 200px;
 }
