--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -44,7 +44,10 @@ footer {
 
 
 .poll-container {
-
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #FFFFFF;
   padding: 15px;
   border-radius: 12px;
@@ -68,4 +71,13 @@ span {
   align-self: center;
   margin-top: 10px;
   overflow: visible;
+}
+
+.left {
+  float: left;
+  width:  350px ;
+}
+
+.right {
+  float: right;
 }
