--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,14 +36,22 @@
           <label for="electorateSize">Expected amount of votes</label>
           <input type="electorateSize" id="electorateSize" name="electorateSize">
         </span>
+        <span>
+          <label for="duration">Running time (in hours)</label>
+          <input type="duration" id="duration" name="duration">
+        </span>
        <span>
          <label for="email">Managing Email</label>
          <input type="email" id="email" name="email">
        </span>
-       <span>
-        <label for="duration">Running time (in hours)</label>
-        <input type="duration" id="duration" name="duration">
+       <div>
+       <span class="left">
+        <label for="distro">Voting Distro (comma-separated emails)</label>
       </span>
+      <span>
+        <input type="textarea" id="distro"  name="distro">
+      </span class="right">
+       </div>
     <!-- </div>
     <div class="vertically-arranged"> -->
       <h4>Candidates List</h4>
