--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,25 +1,27 @@
-main {
-  padding: 120px;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  margin: auto;
+@charset "UTF-8";
+// @font-face {
+//   font-family: LotaGrotesque;
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-Regular.woff2);
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-Regular.woff) format("woff"),url(bb.agency/assets/fonts/LotaGrotesque-Regular.eot?#iefix) format("embedded-opentype"),url(/assets/fonts/LotaGrotesque-Regular.ttf) format("truetype");
+//   font-weight: 400;
+//   font-style: normal
+// }
 
-}
+// @font-face {
+//   font-family: LotaGrotesque;
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-SemiBold.woff2);
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-SemiBold.woff) format("woff"),url(bb.agency/assets/fonts/LotaGrotesque-SemiBold.eot?#iefix) format("embedded-opentype"),url(/assets/fonts/LotaGrotesque-SemiBold.ttf) format("truetype");
+//   font-weight: 600;
+//   font-style: normal
+// }
 
-body {
-  min-height: 100vh;
-  background: rgb(163, 208, 219);
-  background: linear-gradient(
-    227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
-  );
-  margin: auto;
-}
+// @font-face {
+//   font-family: LotaGrotesque;
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-Bold.woff2);
+//   src: url(bb.agency/assets/fonts/LotaGrotesque-Bold.woff) format("woff"),url(bb.agency/assets/fonts/LotaGrotesque-Bold.eot?#iefix) format("embedded-opentype"),url(/assets/fonts/LotaGrotesque-Bold.ttf) format("truetype");
+//   font-weight: 700;
+//   font-style: normal
+// }
+
 
 
