--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,9 @@
-.poll-container {
 
+.poll-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #FFFFFF;
   padding: 15px;
   border-radius: 12px;
@@ -23,4 +27,13 @@ span {
   align-self: center;
   margin-top: 10px;
   overflow: visible;
+}
+
+.left {
+  float: left;
+  width:  350px ;
+}
+
+.right {
+  float: right;
 }
