--- a/views/results.ejs
+++ b/views/results.ejs
@@ -21,9 +21,9 @@
 <body>
   <main>
     <div class="content-container">
-      <header class="poll-title"><h2>Nameless Poll</h2></header>
+      <header class="poll-title"><h2></h2></header>
       <div class="results-list" id="results-list">
-        <section class="result-box">
+        <!-- <section class="result-box">
           <div class="option-name"><h5>1st</h5>Option 1</div>
             <span class="result-bar-wrapper">
               <span class="result-bar"></span>
@@ -36,7 +36,7 @@
               <span class="result-bar" style="width: 20%;"></span>
             </span>
             <div>20%</div>
-        </section>
+        </section> -->
       </div>
     </div>
   </main>
