Header with logo

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,5 @@
-<nav>
-  <a class="navbar-brand" href="/">Decision Maker</a>
-</nav>
+<header class="flex flex-wrap justify-center py-1.5 md:py-16 text-white">
+  <a class="flex items-center" href="/"><img class="inline h-14 pr-5" src="/img/logo.svg" alt="logo">
+    <h1 class="inline text-6xl">Descion Maker</h1>
+  </a>
+</header>
