--- a/views/vote-recorded.ejs
+++ b/views/vote-recorded.ejs
@@ -11,7 +11,7 @@
     <main class="flex flex-col md:flex-row justify-center mx-auto md:max-w-4xl md:space-x-32">
       <div class="md:max-w-sm pb-8 text-white">
         <p class="text-3xl">
-
+          Your vote has been recorded
         </p>
       </div>
     </main>
