--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header class="flex flex-wrap justify-center py-1.5 md:py-16 text-white">
   <a class="flex items-center" href="/"><img class="inline h-14 pr-5" src="/img/logo.svg" alt="logo">
-    <h1 class="inline text-6xl">Descion Maker</h1>
+    <h1 class="inline text-6xl">Decision Maker</h1>
   </a>
 </header>
