--- a/views/vote-created.ejs
+++ b/views/vote-created.ejs
@@ -11,16 +11,7 @@
     <main class="flex flex-col md:flex-row justify-center mx-auto md:max-w-4xl md:space-x-32">
       <div class="md:max-w-sm pb-8 text-white">
         <p class="text-3xl">
-        <table class="table-auto">
-          <thead>
-            <tr>
-              <th>Choice</th>
-              <th>Points</th>
-            </tr>
-          </thead>
-          <tbody id="results">
-          </tbody>
-        </table>
+          Your poll has been recorded
         </p>
       </div>
     </main>
