--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -32,9 +32,7 @@
           <table class="table-fixed" id="sortable">
             <thead>
               <tr>
-                <th class="text-white">Choice</th>
-                <th></th>
-                <th></th>
+                <th class="text-white"></th>
               </tr>
             </thead>
             <tbody class="sortable">
