--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,7 +8,7 @@
 
 <body class="container sm:mx-auto bg-black px-4">
   <%- include('partials/_header') %>
-    <main class="flex flex-col md:flex-row justify-center mx-auto md:max-w-4xl md:space-x-32">
+    <main id="results-main" class="flex flex-col md:flex-row justify-center mx-auto md:max-w-4xl md:space-x-32">
       <div class="md:max-w-sm pb-8 text-white">
         <p class="text-3xl">
         <table class="table-auto">
